# RelayKing-Depth

./: README.md  pyproject.toml  relayking.py  setup.py
core/: config.py  creds_checker.py  relay_analyzer.py  scanner.py  session.py  target_parser.py
detectors/: ghost_spn.py  ntlm_reflection.py
output/: formatters.py
protocols/: http_detector.py
